# blueboat_stonefish

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  package.xml
.devcontainer/: Dockerfile  devcontainer.json  postCreate.sh
config/: blueboat_cirtesu_config.rviz  ekf_fastlio_gt.yaml
launch/: blueboat_cirtesu.launch.py  blueboat_cirtesu_fastlio.launch.py
scenarios/: blueboat.scn  blueboat_cirtesu_full_tank.scn  blueboat_cirtesu_tank.scn  blueboat_lidar.scn  cirtesu_full.scn
scripts/: odom2tf.py
urdf/: blueboat.xacro
