<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>blueboat_cirtesu</name>
  <version>1.0.0</version>
  <description>Simulación del BlueBoat en Stonefish con LiDAR 3D customizado</description>
  <maintainer email="barajas@uji.es">salvador</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>stonefish_ros2</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend> <depend>bullet</depend>      <depend>tf2_ros</depend>
  <depend>geometry_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>